# rag-mlops

./: .env.example  .gitignore  README.md  pyproject.toml  setup_structure.py  test_logger.py
.github/workflows/: ci.yml
mlartifacts/300502921661270955/1e423c9a7d3742d1bac8288a20802df8/artifacts/: final_prompt.txt  response.txt
mlartifacts/300502921661270955/453552af45ec45699da9112b493656bc/artifacts/: response.txt
mlartifacts/300502921661270955/5104394e4a57496da161cd2d930ad099/artifacts/: final_prompt.txt
mlartifacts/300502921661270955/5286103d1c6648be9c85bd007f398901/artifacts/: final_prompt.txt  response.txt
mlartifacts/300502921661270955/6361c60240b14d51b27697dffb8d4126/artifacts/: prompt.txt  response.txt
mlartifacts/300502921661270955/68dcb8e5dfe149da854c55e6df0a8afd/artifacts/: final_prompt.txt
mlartifacts/300502921661270955/6eb912bcd87b42539c5921a7326d3e62/artifacts/: final_prompt.txt  response.txt
mlartifacts/300502921661270955/7771b4c1b4d847fab5e4dce773344163/artifacts/: final_prompt.txt
mlartifacts/300502921661270955/88df432352aa4e289ecfe4fa68f2a491/artifacts/: final_prompt.txt
mlops/: docker-compose.yml
mlops/monitoring/: logger.py  prometheus.yml
notebooks/experiments/: test_mlflow.py  test_rag_mlflow.py
scripts/: load_test.py
src/sre/api/: main.py  routes.py
src/sre/config/: prompts.py  settings.py
src/sre/frontend/: app.py
src/sre/generation/: llm_client.py  model_router.py
src/sre/monitoring/: logger.py  metrics.py
src/sre/utils/: cache.py
tests/: test_api.py
(+12 files in other folders)
