[tool.poetry]
name = "rag-mlops"
version = "1.0.0"
description = "RAG System with MLOps"
authors = ["Aitor <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
openai = "^1.10.0"
pinecone-client = "^3.0.0"
python-dotenv = "^1.0.0"
mlflow = "2.10.0"
prometheus-client = "^0.19.0"
redis = "5.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "24.1.0"
setuptools = "^80.9.0"
streamlit = "^1.52.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "4.1.0"
pytest-asyncio = "^0.23.0"
httpx = "0.26.0"
black = "24.1.0"
ruff = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"